# broken_data_pipeline_env

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  client.py  inference.py  input_pipeline.json  models.py  my_env.py  openenv.yaml  pyproject.toml  requirements.txt  test_my_env.py  validate-submission.sh
core/: rules.py
env/: pipeline_env.py
server/: app.py  parsers.py  pipeline_environment.py
static/: index.html
tasks/: graders.py  tasks.py
